# Flux-Sort

./: .gitignore  README.md  flux_sort.py  fluxsort_serve.py  pyproject.toml
.agents/rules/: gemini-backend-omni.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/Layout/: Sidebar.css  Sidebar.jsx  TopBar.css  TopBar.jsx
frontend/src/views/: HistoryView.jsx  PreviewView.jsx  ScanView.jsx  SettingsView.jsx  SetupView.jsx
src/: __init__.py  ai_classifier.py  config.py  file_detector.py  file_scanner.py  file_sorter.py
src/api/: __init__.py  models.py  server.py
src/api/routes/: __init__.py  ai.py  browse.py  history.py  scan.py  settings.py  sort.py  taxonomy.py
tests/: __init__.py  test_file_detector.py
