[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxsort"
version = "2.0.0"
description = "Smart file organizer with AI-powered classification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["file-organizer", "ai", "gemini", "productivity"]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "google-generativeai>=0.8",
    "schedule>=1.2",
    "watchdog>=4.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
fluxsort = "flux_sort:main"
fluxsort-serve = "fluxsort_serve:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
